--- a/scripts/epgsearchcmds-french.conf
+++ b/scripts/epgsearchcmds-french.conf
@@ -1,5 +1,5 @@
 #
-# This is a example of epgsearchcmds.conf with with usually using and sample entrys.
+# This is an example of epgsearchcmds.conf with sample entries.
 #
 # This file should placed on VDR configuration folder with setup.conf
 #  .../setup.conf
